added logo for title

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel='icon' href = 'si.png'/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
    
-    <link rel="manifest" href="%PUBLIC_URL%/../si.png" />
+    <link  href="%PUBLIC_URL%/../si.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
