--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel='icon' href = 'si.png'/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
-   
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link  href="%PUBLIC_URL%/../si.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
