--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel='icon' href = 'si.png'/>
+    <link rel='icon' href = 'favicon-si.png'/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Judson&display=swap" rel="stylesheet">
-    <link  href="%PUBLIC_URL%/../si.png" />
+    <link  href="%PUBLIC_URL%/../favicon-si.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
